# notes

notes-api/: Cargo.toml
notes-api/migrations/: 20250707105344_users.sql  20250707105355_user_sessions.sql  20250707111745_user_keys.sql  20250707124428_user_passwords.sql  20250707125725_notes.sql  20250707130633_note_keys.sql
notes-api/src/: api.rs  db.rs  extractors.rs  main.rs  models.rs  services.rs  state.rs  tokens.rs
notes-api/src/api/: auth.rs  notes.rs  users.rs
notes-api/src/db/: note_keys.rs  notes.rs  user_keys.rs  user_passwords.rs  user_sessions.rs  users.rs
notes-api/src/extractors/: auth.rs  user_claims.rs
notes-api/src/services/: note_keys.rs  notes.rs  user_keys.rs  user_passwords.rs  user_sessions.rs  users.rs
notes-api/src/utilities/: notes.rs
notes-api/utilities/: Cargo.toml
notes-api/utilities/src/: db.rs
notes-web/: package.json
notes-web/src/: app.d.ts  app.html  hooks.server.ts
notes-web/src/lib/api/: auth.ts  client.ts  notes.ts  users.ts
notes-web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
notes-web/src/routes/(auth)/signin/: +page.server.ts  +page.svelte
notes-web/src/routes/(auth)/signout/: +page.server.ts
notes-web/src/routes/(auth)/signup/: +page.server.ts  +page.svelte
notes-web/src/routes/(notes)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
notes-web/src/routes/[note_id]/: +page.server.ts  +page.svelte
notes-web/src/routes/login/: +page.svelte
notes-web/src/routes/signin/: +page.server.ts  +page.svelte
notes-web/src/routes/signup/: +page.server.ts  +page.svelte
(+9 files in other folders)
