[package]
name = "notes-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
josekit = "0.10.3"
password-hash = "0.5.0"
pulldown-cmark = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "runtime-tokio",
    "sqlite",
    "uuid",
] }
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
utilities = { path = "utilities" }
